--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: SFU VINCI
-email: your-email@example.com
+email: vinci@sfu.ca
 description: >- # this means to ignore newlines until "baseurl:"
   SFU Visual & Interactive Computing Institute
 baseurl: "" # the subpath of your site, e.g. /blog
