--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: vinci@sfu.ca
 description: >- # this means to ignore newlines until "baseurl:"
   SFU Visual & Interactive Computing Institute
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://vinci.sfu.ca" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
