--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,5 +1,11 @@
 - title: VINCI Meet and Greet
   description: Kick-off event where VINCI members meet and participate in discussion
-  date: 2022-04-12
+  date: 2023-04-12
   time: 11:00 AM - 2:00 PM
   location: SFU Burnaby - TASC1 9204
+
+- title: Impacts of Large Language Models & AI on Society
+  description: Kick-off event where VINCI members meet and participate in discussion
+  date: 2024-02-09
+  time: 11:00 AM - 1:00 PM
+  location: SFU Burnaby - ASB 10704
