--- a/_data/events.yml
+++ b/_data/events.yml
@@ -5,7 +5,7 @@
   location: SFU Burnaby - TASC1 9204
 
 - title: Impacts of Large Language Models & AI on Society
-  description: Kick-off event where VINCI members meet and participate in discussion
+  description: Mini-workshop to discuss impact of LLMs and AI on society
   date: 2024-02-09
   time: 11:00 AM - 1:00 PM
   location: SFU Burnaby - ASB 10704
