--- a/_data/events.yml
+++ b/_data/events.yml
@@ -9,3 +9,9 @@
   date: 2024-02-09
   time: 11:00 AM - 1:00 PM
   location: SFU Burnaby - ASB 10704
+
+  - title: VINCI HCI Seminar by Ben Shneiderman
+  description: Generative AI: With Great Power Comes Great Responsibility
+  date: 2024-04-03
+  time: 1:30 PM - 2:30 PM
+  location: SFU Burnaby - TASC1 9204
