--- a/_data/events.yml
+++ b/_data/events.yml
@@ -11,7 +11,7 @@
   location: SFU Burnaby - ASB 10704
 
   - title: VINCI HCI Seminar by Ben Shneiderman
-  description: Generative AI: With Great Power Comes Great Responsibility
+  description: Generative AI - With Great Power Comes Great Responsibility
   date: 2024-04-03
   time: 1:30 PM - 2:30 PM
   location: SFU Burnaby - TASC1 9204
