--- a/_data/events.yml
+++ b/_data/events.yml
@@ -4,7 +4,7 @@
   time: 11:00 AM - 2:00 PM
   location: SFU Burnaby - TASC1 9204
 
-- title: Impacts of Large Language Models & AI on Societ
+- title: Impacts of Large Language Models and AI on Society
   description: Mini-workshop to discuss impact of LLMs and AI on society
   date: 2024-02-09
   time: 11:00 AM - 1:00 PM
