--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   SFU Visual & Interactive Computing Institute
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://vinci.sfu.ca" # the base hostname & protocol for your site, e.g. http://example.com
+show_excerpts: true
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
