--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,3 +1,9 @@
+- title: "Shaping the Future with AI: Innovations in Visual & Interactive Computing"
+  description: Panel discussion and research poster mixer session to highlight state-of-the-art research at the intersections of AI with visual & interactive computing
+  date: 2024-11-26
+  time: 4:30 AM - 7:30 PM
+  location: SFU Vancouver (Harbour Centre)
+
 - title: "Visual & Interactive Computing in the Age of AI: Interpretations and Research Challenges"
   description: Mini-workshop to discuss visual and interactive computing and research challenges
   date: 2024-07-05
