add link for VINCI Nov 26th event

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,5 +1,5 @@
 - title: "Shaping the Future with AI: Innovations in Visual & Interactive Computing"
-  description: Panel discussion and research poster mixer session to highlight state-of-the-art research at the intersections of AI with visual & interactive computing
+  description: Panel discussion and research poster mixer session to highlight state-of-the-art research at the intersections of AI with visual & interactive computing. See https://sfu-vinci.eventbrite.ca/
   date: 2024-11-26
   time: 4:30 AM - 7:30 PM
   location: SFU Vancouver (Harbour Centre)
