add banner to event page

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,6 +1,7 @@
 - name: "shaping-the-future"
+  banner: "/assets/images/events/2024-11-26/sfu-vinci.jpeg"
   title: "Shaping the Future with AI: Innovations in Visual & Interactive Computing"
-  description: Panel discussion and research poster mixer session to highlight state-of-the-art research at the intersections of AI with visual & interactive computing. <a href="https://sfu-vinci.eventbrite.ca/">See event page.</a>
+  description: The event will feature a panel session discussion and a research poster session/mixer to highlight state-of-the-art research at the intersections of AI with visual & interactive computing, and to facilitate networking between SFU faculty and students, alumni, and industry practitioners. <a href="https://sfu-vinci.eventbrite.ca/">See event page.</a>
   date: "2024-11-26"
   time: 4:30 AM - 7:30 PM
   location: SFU Vancouver (Harbour Centre)
@@ -12,7 +13,7 @@
     - time: 5:15 - 5:30pm
       event: Opening remarks
     - time: 5:30 - 6:15pm
-      event: Panel session with Steve DiPaola, Richard (Hao) Zhang, Greg Mori, Eniko Rozsa with Nickholas Vincent as emcee
+      event: Panel session with Eniko Rozsa (IBM), Steve DiPaola (SFU SIAT), Greg Mori (RBC Borealis), Richard Zhang (Amazon & SFU CS), Nicolas Vincent (Emcee)
     - time: 6:15 - 7:00pm
       event: Networking & student posters
   posters:
