--- a/_data/events.yml
+++ b/_data/events.yml
@@ -13,7 +13,7 @@
     - time: 5:15 - 5:30pm
       event: Opening remarks
     - time: 5:30 - 6:15pm
-      event: Panel session with Eniko Rozsa (IBM), Steve DiPaola (SFU SIAT), Greg Mori (RBC Borealis), Richard Zhang (Amazon & SFU CS), Nicolas Vincent (Emcee)
+      event: Panel session with Eniko Rozsa (IBM), Steve DiPaola (SFU SIAT), Greg Mori (RBC Borealis AI), Richard Zhang (Amazon & SFU CS), Nick Vincent (Emcee)
     - time: 6:15 - 7:00pm
       event: Networking & student posters
   posters:
